# kanban-board

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  ai_board.py  ai_routes.py  ai_schemas.py  auth.py  board_routes.py  board_store.py  db.py  main.py  schemas.py
backend/app/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_ai_board.py  test_ai_chat.py  test_app.py  test_auth.py  test_board.py  test_db.py
docs/: CODE_REVIEW.md  DATABASE.md  PLAN.md
frontend/: AGENTS.md  next.config.ts  playwright.config.ts
frontend/src/app/: globals.css
frontend/src/components/: AiChatSidebar.test.tsx  AiChatSidebar.tsx  AppGate.test.tsx  AppGate.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx  NewCardForm.tsx
frontend/src/lib/: ai-api.test.ts  ai-api.ts  api.ts  auth.ts  board-api.test.ts  board-api.ts  kanban.test.ts  kanban.ts
frontend/tests/: ai-chat.spec.ts  auth.spec.ts  helpers.ts  kanban.spec.ts  persistence.spec.ts
scripts/: AGENTS.md  start.bat  start.ps1  stop.bat  stop.sh
